# gf-login-manager

./: Cargo.toml  License  Readme.md  build.rs
src/: add_to_manager_db.sql  create_db.sql  get_token.sql  main.rs  select_token_manager.sql  set_token.sql
ui/: window.slint
